--- a/pagina/index.html
+++ b/pagina/index.html
@@ -17,16 +17,16 @@
             <section class="mensagens">
             </section>
 
-            <form class="messages">
+            <section class="messages">
                 <input type="text" class="inputAddMessage" name="inputAddMessage" placeholder="Mensagem">
                 <button class="button" type="reset">Enviar</button>
                 <button class="img" type="reset"><i class="bi bi-file-earmark-image" style="color: white;"></i></button>
-            </form>
+            </section>
 
-            <form class="formIMG">
+            <section class="formIMG">
                 <input type="text" class="inputAddImage" name="inputAddImage" placeholder="URL da imagem">
                 <button class="button2" type="reset">Enviar</button>
-            </form>
+            </section>
         </section>
     </main>
 
@@ -94,6 +94,7 @@
             border-radius: 10px 0px 0px 10px;
             outline: none;
             border: 1px solid grey;
+            z-index: 1;
         }
 
         .button{
@@ -106,6 +107,7 @@
             font-weight: 600;
             padding-right: 10px;
             cursor: pointer;
+            z-index: 1;
         }
 
         .button2{
@@ -144,7 +146,7 @@
             background-color: var(--colorButtonHover);
         }
 
-        .mensagens p{
+        .mensagens div{
             list-style-type: none;
             background-color: white;
             margin: 5px;
@@ -163,6 +165,15 @@
     </style>
     <script>
         const socket = io()
+
+        function nome() {
+            const nome = prompt('Qual o seu nome?')
+
+            return nome
+        }
+
+        let nomePeople = nome()
+
         const btn = document.querySelector('.button')
         const btn2 = document.querySelector('.button2')
         let input = document.querySelector('.inputAddMessage')
@@ -182,39 +193,58 @@
         
         btn.addEventListener('click', () => {
             if (input.value) {
-                socket.emit('chat message', input.value)
+                socket.emit('chat message', {
+                    profile: nomePeople,
+                    message: input.value
+                })
                 input.value = ''
             }
         })
 
         btn2.addEventListener('click', () => {
             if (inputImg.value) {
-                socket.emit('img message', inputImg.value)
+                socket.emit('img message', {
+                    profile: nomePeople,
+                    img: inputImg.value
+                })
                 inputImg.value = ''
             }
         })
 
         socket.on('chat message', (msg) => {
+            let div = document.createElement('div')
             let paragrafo = document.createElement('p')
+            let small = document.createElement('small')
 
-            paragrafo.innerHTML = msg
+            small.innerHTML = msg.profile
+            small.style.color = 'grey'
+            paragrafo.innerHTML = msg.message
 
-            messageBox.appendChild(paragrafo)
+            messageBox.appendChild(div)
+            div.appendChild(small)
+            div.appendChild(paragrafo)
         })
 
         socket.on('img message', (imgLink) => {
+            let div = document.createElement('div')
+            let br = document.createElement('br')
             let img = document.createElement('img')
+            let small = document.createElement('small')
 
-            img.src = imgLink
+            small.innerHTML = imgLink.profile
+            small.style.color = 'grey'
+            img.src = imgLink.img
             img.style.width = '240px'
             img.style.height = '160px'
 
-            messageBox.appendChild(img)
+            messageBox.appendChild(div)
+            div.appendChild(small)
+            div.appendChild(br)
+            div.appendChild(img)
         })
 
         socket.on('users counter', (users) => {
             let usersCounter = document.querySelector('.usuariosCounter')
-
             usersCounter.innerHTML = users
         })
     </script>
